<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">gnomy</string>
    <string name="title_home">Summary</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_archived_accounts">Archived accounts</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_notifications">Notifications</string>
    <string name="all_accounts">All accounts</string>
    <string name="all_categories">All categories</string>

    <string name="action_search">Search</string>
    <string name="action_filter">Filter results</string>
    <string name="action_categories">Manage categories</string>
    <string name="action_apply">Apply</string>
    <string name="action_apply_description">Apply filters</string>
    <string name="action_show_archived">Show archived accounts</string>
    <string name="action_close_dialog">Close dialog</string>
    <string name="action_filter_all">All transactions</string>
    <string name="action_filter_expenses">Expenses</string>
    <string name="action_filter_incomes">Incomes</string>
    <string name="action_filter_transfers">Transfers</string>
    <string name="action_filter_more">More…</string>

    <string name="action_new_expense">Expense</string>
    <string name="action_new_income">Income</string>
    <string name="action_new_incoming_transfer">Incoming transfer</string>
    <string name="action_new_outgoing_transfer">Outgoing transfer</string>

    <string name="action_settings">Settings</string>
    <string name="action_import">Import data</string>
    <string name="action_export">Export data</string>
    <string name="action_about">About</string>

    <!--  Shared strings  -->
    <string name="prev_month">See previous month</string>
    <string name="next_month">See next month</string>
    <string name="return_to_current_month">Return to current month</string>
    <string name="name">Name</string>
    <string name="see_more">See more</string>
    <string name="color_picker">Color picker</string>
    <string name="form_error">Your data has some errors.</string>
    <string name="confirmation_dialog_title">Closing Activity</string>
    <string name="confirmation_dialog_description">Are you sure you want to do this? Your changes will be discarded.</string>
    <string name="confirmation_dialog_yes">Yes</string>
    <string name="confirmation_dialog_no">No</string>
    <string name="generic_data_error">An error occurred while processing your data.</string>
    <string name="show_more_options">More options</string>
    <string name="show_less_options">Less options</string>
    <string name="toggle_more_options">Toggle more options</string>

    <!--  Accounts fragment  -->
    <string name="accounts_test_month">September 2020</string>

    <!-- Accounts AddEdit -->
    <string name="account_new">New account</string>
    <string name="account_type_bank">Bank account</string>
    <string name="account_type_informal">Informal (cash)</string>
    <string name="account_type_savings">Savings</string>
    <string name="account_type_inversions">Inversions</string>
    <string name="account_type_credit_card">Credit card</string>
    <string name="account_type_other">Other</string>

    <string name="account_initial_value">Initial value</string>

    <string name="account_currency">Account currency</string>
    <string name="account_currency_cannot_change">You cannot change an account\'s currency</string>
    <string name="account_type">Account type</string>
    <string name="account_include_in_sum">Include in homepage sum</string>
    <string name="account_pick_color">Pick a color to identify this account</string>
    <string name="account_pick_color_title">Pick a color</string>
    <string name="account_error_name">Account name can\'t be empty.</string>

    <string name="account_error_initial_value">Initial value is not a valid number.</string>
    <string name="account_message_saved">Your account was saved correctly.</string>
    <string name="account_message_updated">Your account was updated correctly.</string>
    <string name="account_message_archived">Your account was archived correctly.</string>
    <string name="account_current_balance">Current balance</string>

    <!--  Account card  -->
    <string name="account_projected_balance">Projected balance</string>
    <string name="account_accumulated_balance">Accumulated balance</string>
    <string name="account_card_options">Account options</string>
    <string name="account_icon">Account type icon</string>
    <string name="account_initial_value_icon">Money icon</string>
    <string name="account_included_in_sum_icon">Check/Cross icon</string>
    <string name="account_card_details">Details</string>

    <string name="account_card_modify">Modify account</string>
    <string name="account_card_transactions">See transactions</string>
    <string name="account_card_archive">Archive account</string>
    <string name="account_card_delete">Delete account</string>
    <string name="account_card_archive_info">You can restore this account and related transactions later.</string>
    <string name="account_card_delete_warning">Are you sure you want to do this? This action cannot be undone.</string>
    <string name="account_card_restore">Restore</string>
    <string name="accounts_empty_archived_list">You don\'t have any archived accounts.</string>
    <string name="accounts_restore_all">Restore all</string>
    <string name="account_card_delete_short">Delete</string>

    <string name="account_details">Account details</string>

    <string name="account_details_actions">Create new…</string>
    <string name="account_created_at">Created at</string>
    <string name="account_created_at_icon">Calendar icon</string>
    <string name="account_is_included_in_sum">Included in homepage sum</string>
    <string name="account_is_not_included_in_sum">Not included in homepage sum</string>
    <string name="account_balance_history">Balance history</string>
    <string name="account_balance_history_legend">(history)</string>
    <string name="account_confirmed_balance">Confirmed balance</string>
    <string name="account_balance_check_button">Check them</string>
    <string name="account_balance_total">Total</string>
    <string name="account_current_accumulated_balance">Current accumulated balance</string>
    <string name="account_balance_end_of_month">End of month</string>
    <string name="pending_transactions">Pending transactions</string>
    <string name="unresolved_transactions">Unresolved transactions</string>
    <string name="account_balance_not_included_legend">are not included on the accumulated balance.</string>
    <string name="wip">Work in progress</string>

    <string name="transaction_new_expense">New expense</string>

    <!-- Transaction AddEdit -->
    <string name="transaction_modify_expense">Modify expense</string>
    <string name="transaction_new_income">New income</string>
    <string name="transaction_modify_income">Modify income</string>
    <string name="transaction_new_transfer">New transfer</string>
    <string name="transaction_modify_transfer">Modify transfer</string>
    <string name="transaction_amount">Amount</string>
    <string name="transaction_concept">Concept</string>
    <string name="transaction_date">Date</string>
    <string name="transaction_specify_time">Specify time</string>
    <string name="transaction_from_account">From account</string>
    <string name="create_new_account">Create new account</string>
    <string name="create_new_category">Create new category</string>
    <string name="transaction_to_account">To account</string>
    <string name="transaction_currency">Currency</string>
    <string name="transaction_exchange_rate_info">If the currency doesn\'t match the account\'s one, an approximated exchange rate will be used during balance calculation.</string>
    <string name="transaction_category">Category</string>
    <string name="transaction_notes">Additional notes</string>
    <string name="transaction_mark_as_done">Mark as done</string>
    <string name="transaction_mark_as_recurrent" tools:keep="@string/transaction_mark_as_recurrent">Mark as recurrent</string>
    <string name="transaction_error_concept">Transaction concept can\'t be empty.</string>

    <string name="transaction_error_amount">Specified amount is not a valid number.</string>
    <string name="transaction_error_date">Transaction must happen after account creation date.</string>
    <string name="transaction_error_account">Account can\'t be null</string>
    <string name="transaction_error_category">Category can\'t be null</string>
    <string name="transaction_error_transfer_destination_account">Origin and destination accounts can\'t be the same.</string>
    <string name="transaction_message_saved">Your transaction was saved correctly.</string>
    <string name="transaction_message_updated">Your transaction was updated correctly.</string>
    <string name="transaction_card_delete">Delete transaction</string>

    <!-- Transactions list  -->
    <string name="transaction_filters_dialog_static">Filter</string>
    <string name="transaction_filters_message">You are currently using a custom set of filters.</string>
    <string name="transaction_filters_edit_btn">Edit them</string>
    <string name="transaction_filters_clear_btn">Clear filters</string>
    <string name="transaction_transfer_destination_archived">Oops!</string>
    <string name="transaction_transfer_destination_archived_message">The destination account of this transfer seems to be archived. You can restore it or ignore this warning (you won\'t be able to edit the destination account).</string>
    <string name="transaction_transfer_destination_archived_action">Restore it</string>
    <string name="transaction_transfer_destination_archived_ignore">Ignore</string>
    <string name="transaction_filters_status">Status</string>

    <!-- Transaction Filters Dialog -->
    <string name="transaction_filters_any_status">Any</string>

    <string name="transaction_filters_confirmed_status">Confirmed</string>
    <string name="transaction_filters_unconfirmed_status">Unconfirmed</string>
    <string name="transaction_filters_sort_by">Sort by</string>
    <string name="transaction_filters_sort_most_recent">Most recent</string>

    <string name="transaction_filters_sort_least_recent">Least recent</string>
    <string name="transaction_filters_period">Filter by period</string>
    <string name="transaction_filters_from_date">From</string>
    <string name="transaction_filters_to_date">To</string>
    <string name="transaction_filters_start_date_error">Start date must occur before end date</string>
    <string name="transaction_filters_end_date_error">End date must occur after start date</string>
    <string name="transaction_filters_amount">Filter by amount</string>
    <string name="transaction_filters_min_amount">Min. amount</string>
    <string name="transaction_filters_max_amount">Max. amount</string>
    <string name="transaction_filters_min_amount_error">Min. amount must be lower than max. amount</string>
    <string name="transaction_filters_max_amount_error">Max. amount must be greater than min. amount</string>

    <!-- Category card -->
    <string name="category_card_options">Category options</string>
    <string name="category_card_delete">Delete</string>
    <string name="category_card_delete_modal">Delete category</string>
    <string name="category_card_delete_warning">Are you sure you want to do this? This action cannot be undone.</string>
    <string name="category_card_modify">Modify</string>
    <string name="category_icon">Category icon</string>

    <!-- Categories -->
    <string name="categories_title">Categories</string>
    <string name="category_type_incomes">@string/action_filter_incomes</string>
    <string name="category_type_expenses">@string/action_filter_expenses</string>
    <string name="category_type_both">Shared</string>


    <!-- Categories AddEdit -->
    <string name="category_new">New category</string>
    <string name="category_modify">Modify category</string>
    <string name="category_type">Category type</string>
    <string name="category_pick_color">Pick a color to identify this category</string>

    <string name="category_error_name">Category name can\'t be empty.</string>
    <string name="category_message_saved">The category was saved correctly.</string>
    <string name="category_message_updated">The account was updated correctly.</string>
    <string name="category_type_expenses_item">Expense category</string>
    <string name="category_type_incomes_item">Income category</string>
    <string name="category_type_shared_item">Shared category</string>

    <string-array name="account_types">
        <item>@string/account_type_bank</item>
        <item>@string/account_type_informal</item>
        <item>@string/account_type_savings</item>
        <item>@string/account_type_inversions</item>
        <item>@string/account_type_credit_card</item>
        <item>@string/account_type_other</item>
    </string-array>
    <string-array name="transaction_types">
        <item>@string/title_transactions</item>
        <item>@string/action_filter_incomes</item>
        <item>@string/action_filter_expenses</item>
        <item>@string/action_filter_transfers</item>
    </string-array>
    <string-array name="category_types">
        <item>@string/category_type_expenses_item</item>
        <item>@string/category_type_incomes_item</item>
        <item>@string/category_type_shared_item</item>
    </string-array>
    <string-array name="transaction_filters_sorting_strategies">
        <item>@string/transaction_filters_sort_most_recent</item>
        <item>@string/transaction_filters_sort_least_recent</item>
    </string-array>
</resources>
